[package]
name = "blockchain-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.6"
chrono = "0.4.35"
colored = "3.0.0"
serde = { version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
